# CareMate

./: main.py  pyproject.toml
Caremate-v2/: CAREMATE_TECHNICAL_SPECS.md  IMPLEMENTATION_GUIDE.md
Caremate-v2/caremate_crewai/: .env.template  README.md  pyproject.toml
Caremate-v2/caremate_crewai/examples/: usage_examples.py
Caremate-v2/caremate_crewai/src/: main.py
Caremate-v2/caremate_crewai/src/caremate/: crew.py  models.py
Caremate-v2/caremate_crewai/src/caremate/config/: agents.yaml  tasks.yaml
Caremate-v2/caremate_crewai/src/caremate/tools/: orchestrator_tools.py  patient_intelligence_tools.py
Caremate-v2/caremate_crewai/tests/: test_tools.py
caremate-v3/: .env  caremate.py  kabil_portfolio.html  main.py  mongodb.py  pyproject.toml  test_mongo.py  test_tools.py
caremate-v3/caremate-v1/: GET_STARTED.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  backend.py  caremate_backend.py  caremate_colab_setup.ipynb  caremate_crew.py  crew.py  requirements.txt  test_system.py
caremate-v4/: main.py  pyproject.toml
caremate-v4/mongodb/: caremate_db.py
caremate-v4/tools/: emergency.py  emergency_test.py  intent_routing_tool.py  intent_routing_tool_test.py  test_latency.py
phase2/: README.md  main.py  requirements.txt
